# obscura

crates/obscura-browser/src/: page.rs
crates/obscura-cdp/: Cargo.toml
crates/obscura-cdp/src/: dispatch.rs  server.rs
crates/obscura-cdp/src/domains/: dom.rs  input.rs  page.rs  runtime.rs
crates/obscura-cdp/tests/: dynamic_stylesheet_onload_fires.rs  structured_clone_crypto_parity.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: ops.rs  runtime.rs
